--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ install:
     - "pip install ."
     - "pip install -r requirements-dev.txt"
 script:
-  - "flake8 netflix_roulette/netflix_roulette_api.py"
+  - "flake8 --exclude=__init__.py netflix_roulette"
   - "py.test tests/simple.py"
