--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,5 @@ install:
     - "pip install -r requirements-dev.txt"
 script:
   - "flake8 --exclude=__init__.py netflix_roulette"
-  - "py.test tests/simple.py"
+  - "py.test tests/media.py"
+  - "py.test tests/person.py"
