--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
 envlist = py26,py27,py34
 [testenv]
-deps=pytest
+deps=-rrequirements-dev.txt
 commands=py.test tests/media.py tests/person.py
