--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,4 @@ install:
     - "pip install -r requirements-dev.txt"
 script:
   - "flake8 --exclude=__init__.py netflix_roulette"
-  - "py.test tests/media.py"
-  - "py.test tests/person.py"
+  - "py.test tests/media.py tests/person.py"
