--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,8 @@
 [tox]
-envlist = py26,py27,py34
+envlist = py{26,27,33,34}
+
 [testenv]
 deps=-rrequirements-dev.txt
-commands=py.test tests/media.py tests/person.py
+commands =
+    python setup.py check -m -r -s
+    py.test tests
