--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ python:
     - "3.3"
     - "3.4"
 install:
-    - "pip install -r requirements-dev.txt"
+    - "pip install -r requirements.txt"
     - "pip install ."
 script:
   - "flake8 --exclude=__init__.py netflix_roulette"
