fix tests not running

--- a/tox.ini
+++ b/tox.ini
@@ -4,5 +4,4 @@ envlist = py{26,27,33,34}
 [testenv]
 deps=-rrequirements-dev.txt
 commands =
-    python setup.py check -m -r -s
-    py.test tests
+    py.test tests/media.py tests/person.py
