--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ install:
     - "pip install ."
 script:
   - "flake8 --exclude=__init__.py netflix_roulette"
-  - "py.test tests"
+  - "py.test tests/media.py tests/person.py"
