--- a/tox.ini
+++ b/tox.ini
@@ -4,4 +4,4 @@ envlist = py{26,27,33,34}
 [testenv]
 deps=-rrequirements-dev.txt
 commands =
-    py.test tests/media.py tests/person.py
+    py.test tests
