--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,5 @@ install:
     - "pip install ."
 script:
   - "flake8 --exclude=__init__.py netflix_roulette"
+  - "python util/app.py &"
   - "py.test tests"
